# package-running-airi

./: .gitignore  Prepare.bat  Shutdown.bat  airi_mcp_config.json  config.json  prepare_log.txt  python_path.txt
backup_kitten/: Prepare.bat  Shutdown.bat
ffmpeg/: README.txt
ffmpeg/doc/: ffmpeg-all.html
kitten-tts/: .gitignore  config.py  config.yaml  docker-compose-cpu.yml  models.py  server.py  utils.py
kitten-tts/ui/: index.html  presets.yaml  script.js  styles.css
pet_ai_mcp/: README.md  SETUP_CLAUDE.bat  START_SERVER.bat  pet-ai-mcp.spec  pyproject.toml  server.py
pocket-tts/: config.json  install_pocket_tts.bat  pocket_tts_api.py  preflight_checks.bat  run_pocket_tts.bat
