[project]
name = "pet-ai-mcp"
version = "1.0.0"
description = "A safe, friendly MCP server for your personal pet AI"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
pet-ai-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
